force-app/main/default/objects/Order__c/fields/SYS_Respiratory_Level_I__c.field-meta.xml
<CustomField>
    <fullName>SYS_Respiratory_Level_I__c</fullName>
    <formula>Account__r.Respiratory_Level_1_Emp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respiratory AE</label>
    <type>Text</type>
</CustomField>