force-app/main/default/objects/Order__c/fields/sys_TotalList__c.field-meta.xml
<CustomField>
    <fullName>sys_TotalList__c</fullName>
    <description>Total of line items list prices</description>
    <label>Total List Price</label>
    <summarizedField>Order_Line_Item__c.List_Price__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>