force-app/main/default/objects/Order__c/fields/sys_TotalNet__c.field-meta.xml
<CustomField>
    <fullName>sys_TotalNet__c</fullName>
    <description>Rollup of all line item Net prices</description>
    <label>Total Price</label>
    <summarizedField>Order_Line_Item__c.HRCSVC_Price__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>