force-app/main/default/objects/Order__c/fields/Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Text__c</fullName>
    <label>Test Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>