force-app/main/default/objects/Order__c/fields/Truck_Driver__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver__c</fullName>
    <label>Truck Driver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>