force-app/main/default/objects/Order__c/fields/Truck_Driver_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver_Cell_Number__c</fullName>
    <label>Truck Driver Cell Number</label>
    <type>Phone</type>
</CustomField>