force-app/main/default/objects/Order__c/recordTypes/HRCSVC_Evaluation_Orders.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Evaluation_Orders</fullName>
    <active>true</active>
    <description>Record type to define Evaluation Orders</description>
    <label>Evaluation Order</label>
</RecordType>