force-app/main/default/objects/Order__c/recordTypes/HRCSVC_Parts_Order.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Parts_Order</fullName>
    <active>true</active>
    <description>Record type to define Parts Orders</description>
    <label>Parts Order</label>
</RecordType>