force-app/main/default/objects/Order__c/recordTypes/Rental_Orders.recordType-meta.xml
<RecordType>
    <fullName>Rental_Orders</fullName>
    <active>true</active>
    <description>Record type to define Rental Orders</description>
    <label>Rental Order</label>
</RecordType>