force-app/main/default/objects/Order__c/validationRules/HRCSVC20_Order_Not_Allowed_For_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC20_Order_Not_Allowed_For_Customer</fullName>
    <active>true</active>
    <description>SE-2065: PARTS - Prevent Parts Order From Being Created on Entities</description>
    <errorConditionFormula>NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c )

&amp;&amp;

ISPICKVAL(HRCSVC_Ship_To_Location__r.LocationType, &quot;Entity&quot;)

&amp;&amp;

RecordType.DeveloperName = &quot;HRCSVC_Parts_Order&quot;</errorConditionFormula>
    <errorMessage>The account you have selected is not eligible for an order to be placed. JDE ship to is of type Entity.</errorMessage>
</ValidationRule>