force-app/main/default/objects/Order__c/validationRules/HRCSVC_Address_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Address_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ($Profile.Name != &quot;API Profile&quot;),
NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c),
NOT(OR(
AND(
NOT ( ISBLANK (HRCSVC_City__c   )),
NOT ( ISBLANK (HRCSVC_Country__c)),
NOT ( ISBLANK (HRCSVC_Street__c)),
NOT ( ISBLANK (HRCSVC_Zip_Postal_Code__c )),
NOT ( ISBLANK (HRCSVC_State_Province__c ))
),
AND(
( ISBLANK (HRCSVC_City__c   )),
( ISBLANK (HRCSVC_Country__c)),
( ISBLANK (HRCSVC_Street__c)),
( ISBLANK (HRCSVC_Zip_Postal_Code__c )),
( ISBLANK (HRCSVC_State_Province__c )) ,
( ISBLANK (HRCSVC_Street_2__c))
)
)
))</errorConditionFormula>
    <errorMessage>If overwriting the Ship To address, all address fields must be populated.</errorMessage>
</ValidationRule>