force-app/main/default/objects/Order__c/validationRules/HRCSVC_Cannot_edit_after_submission.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cannot_edit_after_submission</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;HRCSVC_Parts_Order&quot; &amp;&amp; $Profile.Name != &quot;API Profile&quot; &amp;&amp; ISPICKVAL(PRIORVALUE(HRCSVC_Status__c), &quot;Submitted&quot;)</errorConditionFormula>
    <errorMessage>You cannot edit an order in Salesforce after submission or cancellation.</errorMessage>
</ValidationRule>