force-app/main/default/objects/Order__c/validationRules/HRCSVC_Patient_details_are_required.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Patient_details_are_required</fullName>
    <active>true</active>
    <description>SE-1109 - Patient details are required for Canada and the US regions</description>
    <errorConditionFormula>NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c )

 &amp;&amp; 

OR( HRCSVC_Ship_To_Location__r.HRCSVC_Region__c = &quot;US&quot; , HRCSVC_Ship_To_Location__r.HRCSVC_Region__c = &quot;Canada&quot; )

 &amp;&amp; 

OR(  ISBLANK( HRCSVC_Patient_First_Name__c ) , ISBLANK( HRCSVC_Patient_Last_Name__c ) ) 

 &amp;&amp;  

RecordType.DeveloperName = &quot;Rental_Orders&quot;</errorConditionFormula>
    <errorMessage>Please fill in the Patient&apos;s first name and last name.</errorMessage>
</ValidationRule>