force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>HRCSVC_Contact__c</columns>
    <columns>HRCSVC_Patient_First_Name__c</columns>
    <columns>HRCSVC_Patient_Last_Name__c</columns>
    <columns>HRCSVC_Medical_Record_ID__c</columns>
    <columns>HRCSVC_ERP_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HRCSVC_Country__c</field>
        <operation>notEqual</operation>
        <value>US,CA</value>
    </filters>
    <label>All</label>
</ListView>