force-app/main/default/objects/Order__c/listViews/Pending_Orders.listView-meta.xml
<ListView>
    <fullName>Pending_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Sold_To__c</columns>
    <columns>sys_TotalNet__c</columns>
    <columns>Main_SRP_Code_2_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hold_Code_01__c</field>
        <operation>equals</operation>
        <value>PN</value>
    </filters>
    <label>Pending Orders</label>
    <language>en_US</language>
</ListView>