force-app/main/default/objects/Order__c/listViews/Respiratory.listView-meta.xml
<ListView>
    <fullName>Respiratory</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Sold_To__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Main_SRP_Code_2_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_SRP_Code_2__c</field>
        <operation>equals</operation>
        <value>690,725</value>
    </filters>
    <label>Respiratory Orders</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>