force-app/main/default/objects/Order__c/listViews/Vest_Purchases.listView-meta.xml
<ListView>
    <fullName>Vest_Purchases</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Order_Type__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Account__c</columns>
    <columns>sys_TotalNet__c</columns>
    <columns>SYS_Respiratory_Level_I__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_SRP_Code_2__c</field>
        <operation>equals</operation>
        <value>725</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>SO,S2</value>
    </filters>
    <label>Vest Purchases</label>
    <language>en_US</language>
</ListView>